fixed gaps

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -23,6 +23,5 @@
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 48px;
   }
 }
